# rules_pyo3-repro

./: .gitignore  BUILD  Cargo.toml  MODULE.bazel  WORKSPACE  hello_world.py  setup_rust.bzl
repo_rules/: probe_system_python_for_pyo3.bzl
src/: main.rs
